Adjusment on dashboard. Scheduling activity started.

--- a/smartLock/app/src/main/AndroidManifest.xml
+++ b/smartLock/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait"/>
 
+        <receiver android:name=".utils.NotificationPublisher" />
+
     </application>
 
 </manifest>
